# activity-food-agent

./: .gitignore  README.md  activity_food_agent.py  config.yaml  dashboard.py  food_ai_launcher.py  install.ps1  pyproject.toml  test_agent.py  test_sensors_ollama.py  wizard_entry.py
food_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
