[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "food-ai"
version = "0.1.2"
authors = [
  { name="Sambit Mishra", email="sambit1912@gmail.com" },
]
description = "An AI agent that monitors computer activity and autonomously decides what food to order."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "psutil",
    "pyyaml",
    "requests",
    "beautifulsoup4",
    "uiautomation",
    "pywin32",
    "streamlit",
    "pandas",
    "plotly",
]

[tool.setuptools]
py-modules = ["activity_food_agent"]

[project.urls]
"Homepage" = "https://github.com/That-Tech-Geek/activity-food-agent"
"Bug Tracker" = "https://github.com/That-Tech-Geek/activity-food-agent/issues"

[project.scripts]
food-agent = "activity_food_agent:main"
